<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/feed_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="@dimen/feed_item_margin"
        android:layout_marginRight="@dimen/feed_item_margin"
        android:layout_marginTop="@dimen/feed_item_margin"
        android:background="@drawable/bg_parent_rounded_corner"
        android:orientation="vertical"
        android:paddingBottom="@dimen/feed_item_padding_top_bottom" >


		
           
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
             <RelativeLayout
                android:layout_width="@dimen/feed_item_profile_pic"
                android:layout_height="@dimen/feed_item_profile_pic"
                                       >

                <ImageView
                    android:id="@+id/profilePic"
                    android:layout_width="@dimen/feed_item_profile_pic"
                    android:layout_height="@dimen/feed_item_profile_pic"
                    android:contentDescription="@string/user_picture"
                    android:scaleType="fitCenter" />

                <ProgressBar
                    android:id="@+id/progressBar1"
                android:layout_width="20dip"
                android:layout_height="20dip"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>
                
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:background="@color/username_bg"
                 android:gravity="center"
                 android:orientation="vertical"
                 android:paddingLeft="@dimen/feed_item_profile_info_padd"
                 android:paddingRight="@dimen/feed_item_profile_info_padd" >
                
                 <TextView
                     android:id="@+id/name"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     
                 android:paddingLeft="@dimen/feed_item_profile_info_padd"
                 android:paddingRight="@dimen/feed_item_profile_info_padd"
                     android:gravity="center"
                     android:textColor="@color/white"
                     android:textSize="@dimen/feed_item_profile_name"
                     android:textStyle="bold" />

        

                     <TextView
                         android:id="@+id/timestamp"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/white"
                         android:textSize="@dimen/feed_item_timestamp" />

                
                </LinearLayout>

                
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/feed_item_profile_info_padd"
                android:paddingRight="@dimen/feed_item_profile_info_padd"
                 >

                <TextView
                    android:id="@+id/txtStatusMsg"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:freezesText="true"
                    android:paddingBottom="5dp"
                    android:paddingLeft="@dimen/feed_item_status_pad_left_right"
                    android:paddingRight="@dimen/feed_item_status_pad_left_right"
                    android:paddingTop="@dimen/feed_item_status_pad_top"
                    android:textSize="@dimen/feed_item_txtstatusmsg" />

                <ImageView
                    android:id="@+id/feedImage1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:contentDescription="@string/feed_picture"
                    android:scaleType="fitXY"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:contentDescription="@string/send_info"
                    android:src="@android:drawable/ic_menu_share" />

            </LinearLayout>

        </LinearLayout>
        
  

</LinearLayout>